--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
           <ul id="site-nav">
               <li><a href="index.html">HOME</a></li>
               <li><a href="food.html">FOOD</a></li>
-              <li><a href="drinks.html">DRINKS</a></li>
+              <li><a href="beverage.html">BEVERAGE</a></li>
               <li><a href="offers.html">OFFERS</a></li>
               <li><a href="contactus.html">CONTACT US</a></li>
           </ul>
