--- a/index.html
+++ b/index.html
@@ -17,24 +17,12 @@
 </head>
 <body>
     
-     <div id="header">
-		
-		<div class="container">
-			<span class="logo-text"><b><i>ABC Restaurant</b></i></span>
-			<ul id="site-nav">
-				<li><a href="index.html"><b>HOME</b></a></li>
-				<li><a href="food.html"><b>FOOD</b></a></li>
-				<li><a href="drinks.html"><b>DRINKS</b></a></li>
-				<li><a href="offers.html"><b>OFFERS</b></a></li>
-				<li><a href="contactus.html"><b>CONTACT US</b></a></li>
-			</ul>
-		</div>
-	</div>
+
 
 
 	<div class="big-container">
 		<div class="img">
-			<img src="../assets/images/brooke-lark-lcZ9NxhOSlo-unsplash (2).jpg" alt="">
+			<img src="/assets/images/brooke-lark-lcZ9NxhOSlo-unsplash (2).jpg" alt="">
 		</div>
 
 		<div class="info-container">
