--- a/beverage.html
+++ b/beverage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
-    <title>Drinks</title>
+    <title>Beverage</title>
 </head>
 <body>
 
@@ -85,4 +85,4 @@
     </div>
 
 </body>
-</html>
+</html> -->
